5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1573_1330.log
== SUBMITION (2019-03-13 15:25:20) 
-- CODE:
print(48/3) 
-- EXECUTION TIME:
0.152448
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
16.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:26:58) 
-- CODE:
round(41.6) 
print7
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print7
NameError: name 'print7' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:27:14) 
-- CODE:
round(41.6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print7
NameError: name 'print7' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:27:17) 
-- CODE:
round(41.6)
-- EXECUTION TIME:
0.124936
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:28:38) 
-- CODE:
round print ((41,66))
-- EXECUTION TIME:
0.194807
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    round print ((41,66))
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:28:41) 
-- CODE:
round print ((41,66))
-- ERROR:
File "XXXX", line 1
    round print ((41,66))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:28:52) 
-- CODE:
round print (41,66)
-- EXECUTION TIME:
0.164414
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    round print (41,66)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:28:58) 
-- CODE:
round print (41,66)
-- ERROR:
File "XXXX", line 1
    round print (41,66)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:29:11) 
-- CODE:
round print (41,6)
-- ERROR:
File "XXXX", line 1
    round print (41,6)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:29:18) 
-- CODE:
round print (41,6)
-- ERROR:
File "XXXX", line 1
    round print (41,6)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:29:25) 
-- CODE:
round(41,6)
-- ERROR:
File "XXXX", line 1
    round print (41,6)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:28) 
-- CODE:
round(41,6)
-- EXECUTION TIME:
0.162232
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:29:33) 
-- CODE:
round(41,6)
-- ERROR:
File "XXXX", line 1
    round print (41,6)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:29:42) 
-- CODE:
round(41,6) print
-- ERROR:
File "XXXX", line 1
    round(41,6) print
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:30:59) 
-- CODE:
print(41,66) round
-- ERROR:
File "XXXX", line 1
    print(41,66) round
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:32:02) 
-- CODE:
print(250/6) 
round
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:32:06) 
-- CODE:
print(250/6) 
round
-- EXECUTION TIME:
0.23786
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:32:07) 
-- CODE:
print(250/6) 
round
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:32:30) 
-- CODE:
print(250/6) round
-- ERROR:
File "XXXX", line 1
    print(250/6) round
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:32:38) 
-- CODE:
print(250/6)round
-- ERROR:
File "XXXX", line 1
    print(250/6)round
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:32:49) 
-- CODE:
print(250/6)
round
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:33:02) 
-- CODE:
print(250/6)
round(41,6)
-- EXECUTION TIME:
0.139731
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:33:03) 
-- CODE:
print(250/6)
round(41,6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:33:12) 
-- CODE:
print(250/6)
round(41.66)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:33:13) 
-- CODE:
print(250/6)
round(41.66)
-- EXECUTION TIME:
0.159767
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:33:14) 
-- CODE:
print(250/6)
round(41.66)
-- EXECUTION TIME:
0.144496
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:33:47) 
-- CODE:
print(250/6)
round(41.66)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:34:00) 
-- CODE:
print(250/6)
round(41.66)
-- EXECUTION TIME:
0.136686
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:34:05) 
-- CODE:
print(250/6)
round(41.66)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:34:25) 
-- CODE:
print(250/6)
round(41.66)print
-- EXECUTION TIME:
0.158126
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 2
    round(41.66)print
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:34:26) 
-- CODE:
print(250/6)
round(41.66)print
-- ERROR:
File "XXXX", line 2
    round(41.66)print
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:34:38) 
-- CODE:
print(250/6)
round(41.66)
print
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:34:40) 
-- CODE:
print(250/6)
round(41.66)
print
-- EXECUTION TIME:
0.134343
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:34:41) 
-- CODE:
print(250/6)
round(41.66)
print
-- EXECUTION TIME:
0.167767
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:34:42) 
-- CODE:
print(250/6)
round(41.66)
print
-- EXECUTION TIME:
0.123239
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:34:42) 
-- CODE:
print(250/6)
round(41.66)
print
-- EXECUTION TIME:
0.173594
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:35:19) 
-- CODE:
print round (250/6)


-- ERROR:
File "XXXX", line 1
    print round (250/6)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:35:21) 
-- CODE:
print round (250/6)


-- EXECUTION TIME:
0.170897
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print round (250/6)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:35:34) 
-- CODE:
print( round 250/6)


-- ERROR:
File "XXXX", line 1
    print( round 250/6)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:35:35) 
-- CODE:
print( round 250/6)


-- EXECUTION TIME:
0.171901
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print( round 250/6)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:36:05) 
-- CODE:
print round ((250/6))


-- EXECUTION TIME:
0.134824
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 1
    print round ((250/6))
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:36:06) 
-- CODE:
print round ((250/6))


-- ERROR:
File "XXXX", line 1
    print round ((250/6))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 12:33:51) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 12:37:32) 
-- CODE:
x = 250
y = 6
z = x/y
round(z, 2)
print(z)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 12:37:40) 
-- CODE:
x = 250
y = 6
z = x/y
round(z, 2)
print(z)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 12:37:45) 
-- CODE:
x = 250
y = 6
z = x/y
round(z, 2)
print(z)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 12:38:06) 
-- CODE:
z = (250/6)
round(z, 2)
print(z)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 12:38:08) 
-- CODE:
z = (250/6)
round(z, 2)
print(z)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 12:38:11) 
-- CODE:
z = (250/6)
round(z, 2)
print(z)
-- EXECUTION TIME:
0.125824
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 12:38:44) 
-- CODE:
z = (250/6)
print(round(z, 2))

-- EXECUTION TIME:
0.164464
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 12:40:34) 
-- CODE:
print(round(250/6, 2))

-- EXECUTION TIME:
0.125776
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
